# crc32c-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
